correction of the school name

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
           <div class="item">
             <div class="row">
-              <div class="role">Computer &amp; Information Sciences (Support Services)</div>
+              <div class="role">Computer &amp; Technology Support Professional</div>
               <div class="when">British Columbia Institute of Technology • 2023</div>
             </div>
             <p>
